--- a/add.html
+++ b/add.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container mt-4 custom-width">
-        <form action="save.inc.php" id="forma" method="POST" enctype="multipart/form-data">
+        <form action="./includes/save.inc.php" id="forma" method="POST" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="name">Name</label>
                 <input type="text" class="form-control" id="name" name="name" placeholder="Name" >
