--- a/add.html
+++ b/add.html
@@ -62,6 +62,15 @@
             window.location = "./index.php";
         })
         $("#submit").click(function(){
+            var inputs = getElementsByTagName('input');
+             for (var i = 0; i < inputs.length; i++) {
+            // only validate the inputs that have the required attribute                
+                    if(inputs[i].value == ""){
+                        // found an empty field that is required
+                        alert("Please fill all required fields");
+                        return false;
+                    }                
+            }   
             $("#forma").submit();
         })
     }); 
